# 1d_iim

./: .gitignore  CMakeLists.txt  script.py
include/init/: init.h
include/preprocess/: preprocess.h
include/system/: system.h
src/: main.cpp
src/init/: init.cpp
src/preprocess/: preprocess.cpp
src/system/: system.cpp
